# phonchar

./: .gitignore  ARCHITECTURE.md  README.md  main.py  prepare_dataset.py  pyproject.toml
.cursor/rules/: use-uv.mdc
src/: alignment.py  config.py  dataset.py  infer.py  model.py  preprocess.py  tokenize.py  train.py
tests/: analyze_alignment.py  demo_progress_bars.py  test_alignment.py  test_compute_metrics.py  test_full_pipeline_demo.py  test_tables_valid.py  test_tokenize.py
tests/tables/: advanced1.csv  advanced2.csv  basic1.csv  basic2.csv
