[project]
name = "phonchar"
version = "0.1.0"
description = "Fast per character phoneme classification (G2P)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.3.0",
    "jiwer>=4.0.0",
    "pandas>=2.3.3",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "transformers[torch]>=4.57.1",
]

[dependency-groups]
dev = ["pytest>=8.4.2"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
